libpurple/util.h

typedef struct _PurpleUtilFetchUrlData PurpleUtilFetchUrlData;
gboolean purple_util_write_data_to_file(const char *filename, const char *data,
									  gssize size);
gboolean
purple_util_write_data_to_file_absolute(const char *filename_full, const char *data, gssize size);
xmlnode *purple_util_read_xml_from_file(const char *filename,
									  const char *description);
FILE *purple_mkstemp(char **path, gboolean binary);
char *purple_util_get_image_filename(gconstpointer image_data, size_t image_len);
gboolean purple_program_is_valid(const char *program);
gboolean purple_running_gnome(void);
gboolean purple_running_kde(void);
gboolean purple_running_osx(void);
char *purple_fd_get_ip(int fd);
const char *purple_normalize(const PurpleAccount *account, const char *str);
const char *purple_normalize_nocase(const PurpleAccount *account, const char *str);
gboolean purple_str_has_prefix(const char *s, const char *p);
gboolean purple_str_has_suffix(const char *s, const char *x);
gchar *purple_strdup_withhtml(const gchar *src);
char *purple_str_add_cr(const char *str);
void purple_str_strip_char(char *str, char thechar);
void purple_util_chrreplace(char *string, char delimiter,
						  char replacement);
gchar *purple_strreplace(const char *string, const char *delimiter,
					   const char *replacement);
char *purple_utf8_ncr_encode(const char *in);
char *purple_utf8_ncr_decode(const char *in);
gchar *purple_strcasereplace(const char *string, const char *delimiter,
						   const char *replacement);
const char *purple_strcasestr(const char *haystack, const char *needle);
char *purple_str_size_to_units(size_t size);
char *purple_str_seconds_to_string(guint sec);
char *purple_str_binary_to_ascii(const unsigned char *binary, guint len);
void purple_got_protocol_handler_uri(const char *uri);
gboolean purple_url_parse(const char *url, char **ret_host, int *ret_port,
						char **ret_path, char **ret_user, char **ret_passwd);
typedef void (*PurpleUtilFetchUrlCallback)(PurpleUtilFetchUrlData *url_data, gpointer user_data, const gchar *url_text, gsize len, const gchar *error_message);
PurpleUtilFetchUrlData *purple_util_fetch_url_request(const gchar *url,
		gboolean full, const gchar *user_agent, gboolean http11,
		const gchar *request, gboolean include_headers,
		PurpleUtilFetchUrlCallback callback, gpointer data);
void purple_util_fetch_url_cancel(PurpleUtilFetchUrlData *url_data);