libpurple/wrapper/Util.cs


		public static int BuildDir(string path, int mode)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_util_write_data_to_file(char * filename, char * data, gssize size)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_util_write_data_to_file(string filename, string data, UNKNOWN size);

		public static bool WriteDataToFile(string filename, string data, gssize size)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_util_write_data_to_file_absolute(char * filename_full, char * data, gssize size)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_util_write_data_to_file_absolute(string filename_full, string data, UNKNOWN size);

		public static bool WriteDataToFileAbsolute(string filename_full, string data, gssize size)
		{
			throw new NotImplementedException();
		}

		/*
		 * xmlnode * purple_util_read_xml_from_file(char * filename, char * description)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_util_read_xml_from_file(string filename, string description);

		public static xmlnode ReadXmlFromFile(string filename, string description)
		{
			throw new NotImplementedException();
		}

		/*
		 * FILE * purple_mkstemp(char ** path, gboolean binary)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_mkstemp(IntPtr path, bool binary);

		public static FILE Mkstemp(char path, bool binary)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_util_get_image_checksum(gconstpointer image_data, size_t image_len)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_util_get_image_checksum(UNKNOWN image_data, UNKNOWN image_len);

		public static string GetImageChecksum(gconstpointer image_data, size_t image_len)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_util_get_image_filename(gconstpointer image_data, size_t image_len)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_util_get_image_filename(UNKNOWN image_data, UNKNOWN image_len);

		public static string GetImageFilename(gconstpointer image_data, size_t image_len)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_program_is_valid(char * program)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_program_is_valid(string program);

		public static bool ProgramIsValid(string program)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_running_gnome()
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_running_gnome();

		public static bool RunningGnome()
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_running_kde()
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_running_kde();

		public static bool RunningKde()
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_running_osx()
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_running_osx();

		public static bool RunningOsx()
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_fd_get_ip(int fd)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_fd_get_ip(int fd);

		public static string FdGetIp(int fd)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_strequal(gchar * left, gchar * right)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_strequal(string left, string right);

		public static bool Strequal(string left, string right)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_normalize(PurpleAccount * account, char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_normalize(IntPtr account, string str);

		public static string Normalize(PurpleAccount account, string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_normalize_nocase(PurpleAccount * account, char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_normalize_nocase(IntPtr account, string str);

		public static string NormalizeNocase(PurpleAccount account, string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_str_has_prefix(char * s, char * p)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_str_has_prefix(string s, string p);

		public static bool StrHasPrefix(string s, string p)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_str_has_suffix(char * s, char * x)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_str_has_suffix(string s, string x);

		public static bool StrHasSuffix(string s, string x)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_strdup_withhtml(gchar * src)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_strdup_withhtml(string src);

		public static string StrdupWithhtml(string src)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_str_add_cr(char * str)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_str_add_cr(string str);

		public static string StrAddCr(string str)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_str_strip_char(char * str, char thechar)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_str_strip_char(string str, char thechar);

		public static void StrStripChar(string str, char thechar)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_util_chrreplace(char * string, char delimiter, char replacement)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_util_chrreplace(string string, char delimiter, char replacement);

		public static void Chrreplace(string string, char delimiter, char replacement)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_strreplace(char * string, char * delimiter, char * replacement)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_strreplace(string string, string delimiter, string replacement);

		public static string Strreplace(string string, string delimiter, string replacement)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_utf8_ncr_encode(char * in)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_utf8_ncr_encode(string in);

		public static string Utf8NcrEncode(string in)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_utf8_ncr_decode(char * in)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_utf8_ncr_decode(string in);

		public static string Utf8NcrDecode(string in)
		{
			throw new NotImplementedException();
		}

		/*
		 * gchar * purple_strcasereplace(char * string, char * delimiter, char * replacement)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_strcasereplace(string string, string delimiter, string replacement);

		public static string Strcasereplace(string string, string delimiter, string replacement)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_strcasestr(char * haystack, char * needle)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_strcasestr(string haystack, string needle);

		public static string Strcasestr(string haystack, string needle)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_str_size_to_units(size_t size)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_str_size_to_units(UNKNOWN size);

		public static string StrSizeToUnits(size_t size)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_str_seconds_to_string(guint sec)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_str_seconds_to_string(uint sec);

		public static string StrSecondsToString(uint sec)
		{
			throw new NotImplementedException();
		}

		/*
		 * char * purple_str_binary_to_ascii(unsigned char, guint len)
		 */
		[DllImport("libpurple.dll")]
		private static extern string purple_str_binary_to_ascii(UNKNOWN char, uint len);

		public static string StrBinaryToAscii(unsigned char, uint len)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_got_protocol_handler_uri(char * uri)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_got_protocol_handler_uri(string uri);

		public static void GotProtocolHandlerUri(string uri)
		{
			throw new NotImplementedException();
		}

		/*
		 * gboolean purple_url_parse(char * url, char ** ret_host, int * ret_port, char ** ret_path, char ** ret_user, char ** ret_passwd)
		 */
		[DllImport("libpurple.dll")]
		private static extern bool purple_url_parse(string url, IntPtr ret_host, IntPtr ret_port, IntPtr ret_path, IntPtr ret_user, IntPtr ret_passwd);

		public static bool UrlParse(string url, char ret_host, int ret_port, char ret_path, char ret_user, char ret_passwd)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleUtilFetchUrlData * purple_util_fetch_url_request(gchar * url, gboolean full, gchar * user_agent, gboolean http11, gchar * request, gboolean include_headers, PurpleUtilFetchUrlCallback callback, gpointer data)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_util_fetch_url_request(string url, bool full, string user_agent, bool http11, string request, bool include_headers, UNKNOWN callback, IntPtr data);

		public static PurpleUtilFetchUrlData FetchUrlRequest(string url, bool full, string user_agent, bool http11, string request, bool include_headers, PurpleUtilFetchUrlCallback callback, IntPtr data)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleUtilFetchUrlData * purple_util_fetch_url_request_len(gchar * url, gboolean full, gchar * user_agent, gboolean http11, gchar * request, gboolean include_headers, gssize max_len, PurpleUtilFetchUrlCallback callback, gpointer data)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_util_fetch_url_request_len(string url, bool full, string user_agent, bool http11, string request, bool include_headers, UNKNOWN max_len, UNKNOWN callback, IntPtr data);

		public static PurpleUtilFetchUrlData FetchUrlRequestLen(string url, bool full, string user_agent, bool http11, string request, bool include_headers, gssize max_len, PurpleUtilFetchUrlCallback callback, IntPtr data)
		{
			throw new NotImplementedException();
		}

		/*
		 * PurpleUtilFetchUrlData * purple_util_fetch_url_request_len_with_account(PurpleAccount * account, gchar * url, gboolean full, gchar * user_agent, gboolean http11, gchar * request, gboolean include_headers, gssize max_len, PurpleUtilFetchUrlCallback callback, gpointer data)
		 */
		[DllImport("libpurple.dll")]
		private static extern IntPtr purple_util_fetch_url_request_len_with_account(IntPtr account, string url, bool full, string user_agent, bool http11, string request, bool include_headers, UNKNOWN max_len, UNKNOWN callback, IntPtr data);

		public static PurpleUtilFetchUrlData FetchUrlRequestLenWithAccount(PurpleAccount account, string url, bool full, string user_agent, bool http11, string request, bool include_headers, gssize max_len, PurpleUtilFetchUrlCallback callback, IntPtr data)
		{
			throw new NotImplementedException();
		}

		/*
		 * void purple_util_fetch_url_cancel(PurpleUtilFetchUrlData * url_data)
		 */
		[DllImport("libpurple.dll")]
		private static extern void purple_util_fetch_url_cancel(IntPtr url_data);
